--- a/index.html
+++ b/index.html
@@ -2,102 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>㳠米鸭 (taimiyaxeditz)</title>
+  <title>Button Visibility Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background: url('https://i.imgur.com/ss4LnZS.png') no-repeat center center fixed;
-      background-size: cover;
+      background: #111;
       color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      text-align: center;
-      flex-direction: column;
-      backdrop-filter: brightness(0.85);
     }
-
-    .logo {
-      width: 160px;
-      height: 160px;
-      border-radius: 50%;
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.7);
-      border: 3px solid #00ffff;
-    }
-
-    .name {
-      margin-top: 20px;
-      font-size: 26px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      color: #00ffff;
-      text-shadow: 1px 1px 3px #000;
-    }
-
-    .description {
-      margin-top: 12px;
-      max-width: 600px;
-      font-size: 17px;
-      line-height: 1.6;
-      color: #eee;
-      text-shadow: 1px 1px 2px #000;
-      padding: 0 20px;
-    }
-
-    .welcome {
-      margin-top: 15px;
-      font-size: 16px;
-      max-width: 600px;
-      color: #ddd;
-      padding: 0 20px;
-      text-shadow: 1px 1px 2px #000;
-    }
-
     .buttons {
-      margin-top: 20px;
       display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
-      justify-content: center;
+      gap: 20px;
     }
-
     .buttons a {
+      background: #00bcd4;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 30px;
       text-decoration: none;
-      color: #fff;
-      background-color: #00bcd4;
-      padding: 10px 20px;
-      border-radius: 25px;
-      transition: 0.3s ease;
       font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 16px;
+      box-shadow: 0 5px 10px rgba(0, 255, 255, 0.4);
     }
-
     .buttons a:hover {
-      background-color: #0097a7;
-      transform: scale(1.05);
+      background: #00ffff;
+      color: #000;
     }
   </style>
 </head>
 <body>
-  <img src="https://yt3.googleusercontent.com/D0Q_oZbMcB9013-eUMeJZS4E0RVViqzOuAYzMLvPOF05XF7otGPgbVBAvxhi1EfR4zE7YzmFDA=s160-c-k-c0x00ffffff-no-rj" alt="Logo" class="logo">
-
-  <div class="name">㳠米鸭 (taimiyaxeditz)</div>
-
-  <div class="description">
-    I'm a coder with over 3 years of experience, now working as a full-stack developer. Always expanding my skills and exploring new technologies to stay ahead in the coding game.
-  </div>
-
-  <div class="welcome">
-    Welcome to my space! I’m passionate about coding, creative digital content, and building cool things across platforms. Whether it's editing, development, or community engagement, I'm all about constant growth and connection.
-  </div>
-
   <div class="buttons">
-    <a href="https://discord.com/users/@taimiyaxeditz" target="_blank">Discord</a>
-    <a href="https://youtube.com/@taimiyaxeditz?si=kwh2hmAV_XRRhXOf" target="_blank">YouTube</a>
-    <a href="https://github.com/Taimiya-Creator" target="_blank">GitHub</a>
+    <a href="https://discord.com" target="_blank"><i class="fab fa-discord"></i> Discord</a>
+    <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+    <a href="https://github.com" target="_blank"><i class="fab fa-github"></i> GitHub</a>
   </div>
 </body>
 </html>
