--- a/index.html
+++ b/index.html
@@ -1,103 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>㳠米鸭 (taimiyaxeditz)</title>
+  <meta charset="UTF-8" />
+  <title>㳠米鸭 | Taimiyaxeditz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
-      background: url('https://i.imgur.com/ss4LnZS.png') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #000428, #004e92);
+      height: 100vh;
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      color: #fff;
+    }
+
+    .container {
       text-align: center;
-      flex-direction: column;
-      backdrop-filter: brightness(0.85);
+      background: rgba(255, 255, 255, 0.05);
+      padding: 40px;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
+      max-width: 700px;
+      animation: fadeIn 1s ease-out;
     }
 
     .logo {
       width: 160px;
       height: 160px;
       border-radius: 50%;
-      box-shadow: 0 0 25px rgba(0, 255, 255, 0.7);
-      border: 3px solid #00ffff;
+      border: 4px solid #00ffff;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+      transition: transform 0.4s ease;
+    }
+
+    .logo:hover {
+      transform: rotate(5deg) scale(1.05);
     }
 
     .name {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 28px;
       margin-top: 20px;
-      font-size: 26px;
-      font-weight: bold;
-      letter-spacing: 1px;
       color: #00ffff;
-      text-shadow: 1px 1px 3px #000;
+      text-shadow: 2px 2px 5px #000;
     }
 
-    .description {
-      margin-top: 12px;
-      max-width: 600px;
+    .description, .welcome {
+      margin-top: 16px;
       font-size: 17px;
-      line-height: 1.6;
-      color: #eee;
-      text-shadow: 1px 1px 2px #000;
-      padding: 0 20px;
-    }
-
-    .welcome {
-      margin-top: 15px;
-      font-size: 16px;
-      max-width: 600px;
-      color: #ddd;
-      padding: 0 20px;
+      line-height: 1.7;
+      color: #e0f7fa;
       text-shadow: 1px 1px 2px #000;
     }
 
     .buttons {
-      margin-top: 20px;
+      margin-top: 30px;
       display: flex;
-      gap: 15px;
+      gap: 20px;
       flex-wrap: wrap;
       justify-content: center;
     }
 
     .buttons a {
       text-decoration: none;
-      color: #fff;
-      background-color: #00bcd4;
-      padding: 10px 20px;
-      border-radius: 25px;
-      transition: 0.3s ease;
-      font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+      color: white;
+      background: linear-gradient(135deg, #00bcd4, #0097a7);
+      padding: 12px 25px;
+      border-radius: 30px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      box-shadow: 0 6px 15px rgba(0, 255, 255, 0.3);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 16px;
     }
 
     .buttons a:hover {
-      background-color: #0097a7;
-      transform: scale(1.05);
+      background: #00ffff;
+      color: #000;
+      transform: translateY(-3px) scale(1.05);
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
 <body>
-  <img src="https://yt3.googleusercontent.com/D0Q_oZbMcB9013-eUMeJZS4E0RVViqzOuAYzMLvPOF05XF7otGPgbVBAvxhi1EfR4zE7YzmFDA=s160-c-k-c0x00ffffff-no-rj" alt="Logo" class="logo">
+  <div class="container">
+    <img src="https://yt3.googleusercontent.com/D0Q_oZbMcB9013-eUMeJZS4E0RVViqzOuAYzMLvPOF05XF7otGPgbVBAvxhi1EfR4zE7YzmFDA=s160-c-k-c0x00ffffff-no-rj" alt="Logo" class="logo" />
 
-  <div class="name">㳠米鸭 (taimiyaxeditz)</div>
+    <div class="name">㳠米鸭 (taimiyaxeditz)</div>
 
-  <div class="description">
-    I'm a coder with over 3 years of experience, now working as a full-stack developer. Always expanding my skills and exploring new technologies to stay ahead in the coding game.
+    <div class="description">
+      I'm a coder with over 3 years of experience, now working as a full-stack developer. Always exploring new technologies and pushing boundaries.
+    </div>
+
+    <div class="welcome">
+      Welcome to my digital space! I'm passionate about coding, editing, and building across the digital universe. Let's innovate together!
+    </div>
+
+    <div class="buttons">
+      <a href="https://discord.com" target="_blank"><i class="fab fa-discord"></i> Discord</a>
+      <a href="https://youtube.com/@taimiyaxeditz?si=kwh2hmAV_XRRhXOf" target="_blank"><i class="fab fa-youtube"></i> YouTube</a>
+      <a href="https://github.com/Taimiya-Creator" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+    </div>
   </div>
 
-  <div class="welcome">
-    Welcome to my space! I’m passionate about coding, creative digital content, and building cool things across platforms. Whether it's editing, development, or community engagement, I'm all about constant growth and connection.
-  </div>
-
-  <div class="buttons">
-    <a href="https://discord.com/users/@taimiyaxeditz" target="_blank">Discord</a>
-    <a href="https://youtube.com/@taimiyaxeditz?si=kwh2hmAV_XRRhXOf" target="_blank">YouTube</a>
-    <a href="https://github.com/Taimiya-Creator" target="_blank">GitHub</a>
-  </div>
+  <script>
+    gsap.from(".logo", { duration: 1, opacity: 0, scale: 0.8, ease: "back.out(1.7)" });
+    gsap.from(".name", { duration: 1.2, opacity: 0, y: -30, delay: 0.3 });
+    gsap.from(".description", { duration: 1.2, opacity: 0, x: -50, delay: 0.6 });
+    gsap.from(".welcome", { duration: 1.2, opacity: 0, x: 50, delay: 0.9 });
+    gsap.from(".buttons a", {
+      duration: 0.6,
+      opacity: 0,
+      y: 20,
+      stagger: 0.2,
+      delay: 1.2,
+      ease: "power2.out"
+    });
+  </script>
 </body>
 </html>
