--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #000428, #004e92);
+      background: url('https://i.imgur.com/ss4LnZS.png') no-repeat center center fixed;
+      background-size: cover;
       height: 100vh;
       overflow: hidden;
       display: flex;
@@ -27,11 +28,11 @@
 
     .container {
       text-align: center;
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(0, 0, 0, 0.6);
       padding: 40px;
       border-radius: 20px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
+      backdrop-filter: blur(6px);
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
       max-width: 700px;
       animation: fadeIn 1s ease-out;
     }
@@ -75,7 +76,7 @@
 
     .buttons a {
       text-decoration: none;
-      color: white;
+      color: #fff;
       background: linear-gradient(135deg, #00bcd4, #0097a7);
       padding: 12px 25px;
       border-radius: 30px;
@@ -86,6 +87,7 @@
       align-items: center;
       gap: 10px;
       font-size: 16px;
+      border: 1px solid #00ffff;
     }
 
     .buttons a:hover {
